# itmo_data_for_ml

./: README.md  era5_download.py  hres_download.py  pyproject.toml
